Fix output path

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "serve": "serve docs -p 3003",
     "clean": "rm -rf docs"
   },
